packages/toolkit/core/objects/_form-group.scss
.ofh-form-group {
  @include ofh-responsive-margin(24, 'bottom');

  .ofh-form-group:last-of-type {
    margin-bottom: 0; // Remove margin from last item in nested groups
  }
}

.ofh-form-group--wrapper {
  @include ofh-responsive-margin(24, 'bottom');
}

.ofh-form-group--error {
  border-left: $ofh-stroke-weight-4 solid $ofh-color-feedback-error-2-main;
  padding-left: $ofh-size-16;

  .ofh-form-group {
    // Reset error styles in nested form groups that might have error class
    border: 0;
    padding: 0;
  }
}

